[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/BG/GAME_Over.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Button/ClickButton.png" type="Texture" id=2]
[ext_resource path="res://PlayButton2.gd" type="Script" id=3]
[ext_resource path="res://Font/ARIBLK.TTF" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 4 )

[node name="MainMenu" type="Node"]

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = -19.0401
margin_right = 1920.0
margin_bottom = 1060.96
rect_scale = Vector2( 0.71, 0.7 )
texture = ExtResource( 1 )

[node name="PlayButton2" type="Button" parent="."]
margin_left = 518.033
margin_top = 302.186
margin_right = 886.033
margin_bottom = 663.186
rect_pivot_offset = Vector2( 178, 178 )
icon = ExtResource( 2 )
flat = true
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 23.0
margin_top = 20.0
margin_right = 1107.0
margin_bottom = 169.0
custom_fonts/font = SubResource( 1 )
text = "Este Demo fue Creado por Adderly Cespedes
Para mas info visita: 
1- YouTube.com/Adderly2dd 
2- www.2ddEntertainment.com/LBB"
[connection signal="mouse_entered" from="PlayButton2" to="PlayButton2" method="_on_PlayButton_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton2" to="PlayButton2" method="_on_PlayButton_mouse_exited"]
[connection signal="pressed" from="PlayButton2" to="PlayButton2" method="_on_PlayButton_pressed"]
